<resources>
    <string name="app_name">Movie Application</string>
    <string name="popular">Popular</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_rated">Top Rated</string>
    <string name="marvelmovies">marvelMovies</string>
    <string name="movie_title">movie_title</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="vote">vote</string>
    <string name="releaseDate">releasedate</string>
    <string name="movieImages">Movie Images</string>
    <string name="search">Search…</string>
    <string name="no_internet">No Internet</string>
    <string name="romantic">Romantic</string>
    <string name="adventure">adventure</string>
    <string name="sci_fi">sci-fi</string>
    <string name="thriller">thriller</string>
    <string name="horror">horror</string>
</resources>